--- a/styles/app.module.css
+++ b/styles/app.module.css
@@ -1,7 +1,7 @@
 .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 6rem;
     min-height: 100vh;
@@ -10,4 +10,330 @@
 .content {
     width: var(--max-width);
     max-width: 100%;
+}
+
+.toast {
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #e6f3ff;
+    color: #000624;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 1000;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 900px;
+    box-sizing: border-box;
+}
+
+.toast-close {
+    background: none;
+    border: none;
+    color: #000624;
+    font-size: 1.2em;
+    cursor: pointer;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.toast-content {
+    margin-right: 15px;
+    flex: 1;
+}
+
+.toast-close:hover {
+    color: #004080;
+}
+
+@media (max-width: 768px) {
+    .toast {
+        width: 95%;
+        padding: 8px 15px;
+        font-size: 0.9em;
+    }
+
+    .toast-close {
+        font-size: 1em;
+    }
+}
+
+.toast-icon {
+    width: 22px;
+    height: 22px;
+    margin-right: 10px;
+    background-color: transparent;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (max-width: 480px) {
+    .toast {
+        top: 0;
+        left: 0;
+        right: 0;
+        transform: none;
+        width: 100%;
+        border-radius: 0;
+        padding: 10px 15px;
+    }
+
+    .toast-content {
+        margin-right: 10px;
+    }
+}
+
+.disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.disabled:hover {
+    /* Style for hover state */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.row > * {
+    flex: 1;
+    margin-right: 1rem;
+}
+
+.row > *:last-child {
+    margin-right: 0;
+}
+
+.row > *:first-child {
+    margin-left: 0;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+.column > * {
+    margin-bottom: 1rem;
+}
+
+.column > *:last-child {
+    margin-bottom: 0;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.full-height {
+    height: 100%;
+}
+
+.row.start {
+    justify-content: flex-start;
+}
+
+.row.end {
+    justify-content: flex-end;
+}
+
+.row.center {
+    justify-content: center;
+}
+
+.row.between {
+    justify-content: space-between;
+}
+
+.column.start {
+    align-items: flex-start;
+}
+
+.column.end {
+    align-items: flex-end;
+}
+
+.column.center {
+    align-items: center;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(50%, auto));
+    width: var(--max-width);
+    max-width: 100%;
+}
+
+@media (max-width: 700px) {
+    .grid {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+}
+
+@media (min-width: 701px) and (max-width: 1120px) {
+    .grid {
+        grid-template-columns: repeat(2, 50%);
+    }
+}
+
+.selectable {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.selectable:hover {
+    cursor: pointer;
+}
+
+.active {
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.5);
+}
+
+.primary {
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+    padding: 16px;
+    width: 100%;
+}
+
+.primary:hover {
+    background: rgba(var(--card-rgb), 0.2);
+    border: 1px solid rgba(var(--card-border-rgb), 0.25);
+}
+
+.secondary {
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+    padding: 16px;
+    width: 100%;
+}
+
+.secondary:hover {
+    background: rgba(var(--card-rgb), 0.2);
+    border: 1px solid rgba(var(--card-border-rgb), 0.25);
+}
+
+.global-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.25);
+    color: #fff;
+    z-index: 9999;
+}
+
+.loader {
+    width: 50px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 8px solid rgb(var(--premium-rgb));
+    animation: l20-1 0.8s infinite linear alternate,
+    l20-2 1.6s infinite linear;
+}
+
+@keyframes l20-1 {
+    0% {
+        clip-path: polygon(50% 50%, 0 0, 50% 0%, 50% 0%, 50% 0%, 50% 0%, 50% 0%);
+    }
+    12.5% {
+        clip-path: polygon(
+                50% 50%,
+                0 0,
+                50% 0%,
+                100% 0%,
+                100% 0%,
+                100% 0%,
+                100% 0%
+        );
+    }
+    25% {
+        clip-path: polygon(
+                50% 50%,
+                0 0,
+                50% 0%,
+                100% 0%,
+                100% 100%,
+                100% 100%,
+                100% 100%
+        );
+    }
+    50% {
+        clip-path: polygon(
+                50% 50%,
+                0 0,
+                50% 0%,
+                100% 0%,
+                100% 100%,
+                50% 100%,
+                0% 100%
+        );
+    }
+    62.5% {
+        clip-path: polygon(
+                50% 50%,
+                100% 0,
+                100% 0%,
+                100% 0%,
+                100% 100%,
+                50% 100%,
+                0% 100%
+        );
+    }
+    75% {
+        clip-path: polygon(
+                50% 50%,
+                100% 100%,
+                100% 100%,
+                100% 100%,
+                100% 100%,
+                50% 100%,
+                0% 100%
+        );
+    }
+    100% {
+        clip-path: polygon(
+                50% 50%,
+                50% 100%,
+                50% 100%,
+                50% 100%,
+                50% 100%,
+                50% 100%,
+                0% 100%
+        );
+    }
+}
+
+@keyframes l20-2 {
+    0% {
+        transform: scaleY(1) rotate(0deg);
+    }
+    49.99% {
+        transform: scaleY(1) rotate(135deg);
+    }
+    50% {
+        transform: scaleY(-1) rotate(0deg);
+    }
+    100% {
+        transform: scaleY(-1) rotate(-135deg);
+    }
 }
