--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,13 @@
 :root {
     --max-width: 1100px;
-    --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+    --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
     --card-rgb: 180, 185, 188;
     --card-border-rgb: 131, 134, 135;
+    --premium-rgb: 116, 22, 165;
 }
 
 * {
@@ -23,9 +24,11 @@ body {
 
 body {
     color: rgb(0, 0, 0);
-    background: linear-gradient(to bottom,
-    transparent,
-    rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+    background: linear-gradient(
+            to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))
+    ) rgb(var(--background-start-rgb));
 }
 
 a {
@@ -43,7 +46,6 @@ header {
 }
 
 @media (max-width: 700px) {
-
     header a,
     header div {
         display: flex;
@@ -58,31 +60,35 @@ header {
         padding: 0.5rem;
         inset: 0 0 auto;
         border-bottom: 1px solid rgba(var(--card-border-rgb), 0.25);
-        background: linear-gradient(to top,
-        transparent 0%,
-        rgb(var(--background-start-rgb)) 40%);
+        background: linear-gradient(
+                to top,
+                transparent 0%,
+                rgb(var(--background-start-rgb)) 40%
+        );
     }
 
     header a {
         padding: 1.5rem;
         inset: auto 0 0;
         border-top: 1px solid rgba(var(--card-border-rgb), 0.25);
-        background: linear-gradient(to bottom,
-        transparent 0%,
-        rgb(var(--background-end-rgb)) 40%);
+        background: linear-gradient(
+                to bottom,
+                transparent 0%,
+                rgb(var(--background-end-rgb)) 40%
+        );
     }
 }
 
 main,
 footer {
     display: grid;
-    grid-template-columns: repeat(4, minmax(25%, auto));
+    grid-template-columns: repeat(2, minmax(50%, auto));
+    gap: 32px;
     width: var(--max-width);
     max-width: 100%;
 }
 
 @media (max-width: 700px) {
-
     main,
     footer {
         grid-template-columns: 1fr;
@@ -91,7 +97,6 @@ footer {
 }
 
 @media (min-width: 701px) and (max-width: 1120px) {
-
     main,
     footer {
         grid-template-columns: repeat(2, 50%);
@@ -103,8 +108,8 @@ section {
     border-radius: 12px;
     background: rgba(var(--card-rgb), 0);
     border: 1px solid rgba(var(--card-border-rgb), 0);
-    transition: background 200ms, border 200ms;
-    cursor: pointer;
+    transition: background 200ms,
+    border 200ms;
 }
 
 section span {
@@ -141,10 +146,49 @@ article {
     align-items: center;
     position: relative;
     padding: 4rem 0;
-    flex-direction: column;
+    /*flex-direction: column;*/
     gap: 50px;
 }
 
 article a {
     text-decoration: underline;
+}
+
+h1 {
+    font-size: 32px;
+    font-weight: 700;
+}
+
+button {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    margin-bottom: 16px;
+    border-radius: 16px;
+    width: fit-content;
+    border: none;
+    background: none;
+    text-align: center;
+    justify-content: center;
+}
+
+li {
+    margin-bottom: 0.5rem;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 10px;
+    width: 100%;
 }
